Moved logic to separate class to make controller more readable. Modified boostrap.css as it was bugging printing options.

--- a/MindBubbles/Content/bootstrap.css
+++ b/MindBubbles/Content/bootstrap.css
@@ -228,7 +228,6 @@ table {
   * {
     color: #000 !important;
     text-shadow: none !important;
-    background: transparent !important;
     box-shadow: none !important;
   }
   a,
